--- a/app/globals.css
+++ b/app/globals.css
@@ -44,3 +44,8 @@ body {
   width: 100%;
   height: 100vh;
 }
+
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
